[gd_scene load_steps=13 format=2]

[ext_resource path="res://Entity/Ground_Enemy/Sprites/Meele_Enemy.png" type="Texture" id=1]
[ext_resource path="res://Entity/Ground_Enemy/Ground_Enemy.gd" type="Script" id=2]
[ext_resource path="res://Entity/Ground_Enemy/Sprites/Melee_Enemy_Hand.png" type="Texture" id=3]
[ext_resource path="res://Entity/Ground_Enemy/GroundEnemyHand.tscn" type="PackedScene" id=4]
[ext_resource path="res://Entity/Ground_Enemy/Sprites/Enemy_Shield.png" type="Texture" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.0
height = 28.0

[sub_resource type="Animation" id=4]
resource_name = "Death"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Emotion:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hp:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("EnemySprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -23 ), Vector2( 0, -28 ), Vector2( 0, -11 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("EnemySprite:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -90.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("EnemySprite:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.05, 0.11, 0.24, 0.34 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.592157, 0.592157, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0.537255 ), Color( 1, 0, 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Death:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.24 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("GroundEnemyHand:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("EnemySprite/Hand:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "Melee"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("GroundEnemyHand:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -70.3, 0.0, 18.8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GroundEnemyHand:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GroundEnemyHand:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("EnemySprite/Hand:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("GroundEnemyHand:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GroundEnemyHand:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GroundEnemyHand:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("EnemySprite/Hand:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Hp:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("EnemySprite:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -23 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("EnemySprite:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("EnemySprite/Hand:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 12, 36 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath(".:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("EnemySprite:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Blood:emitting")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Death:emitting")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Shield:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Shield:modulate")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0.905882, 1, 0.247059 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Shield"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Shield:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shield:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.08, 0.24, 0.33 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0.905882, 1, 0.247059 ), Color( 0, 0.905882, 1, 0.584314 ), Color( 0, 0.905882, 1, 0.254902 ), Color( 0, 0.905882, 1, 0 ) ]
}

[sub_resource type="Curve" id=5]
max_value = 5.0
_data = [ Vector2( 0.133562, 2.88636 ), 0.0, 3.49282, 0, 0, Vector2( 0.530822, 1.61364 ), -11.442, -11.442, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0.215753, 0.254545 ), 0.0, 1.28705, 0, 0, Vector2( 0.917808, 0.0545454 ), 0.0, 0.0, 0, 0 ]

[node name="Ground_Enemy" type="KinematicBody2D" groups=["Enemy", "Ground_Enemy"]]
pause_mode = 1
collision_layer = 8
collision_mask = 3
script = ExtResource( 2 )

[node name="EnemySprite" type="Sprite" parent="."]
position = Vector2( 0, -23 )
scale = Vector2( -0.25, 0.25 )
texture = ExtResource( 1 )

[node name="Hand" type="Sprite" parent="EnemySprite"]
position = Vector2( 12, 36 )
rotation = 3.14159
scale = Vector2( 1, -1.252 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 3, -23 )
shape = SubResource( 1 )
disabled = true

[node name="TerrainDetector" type="RayCast2D" parent="."]
position = Vector2( 0, -21 )
enabled = true
cast_to = Vector2( 12, 0 )

[node name="PlayerDetector" type="RayCast2D" parent="."]
position = Vector2( -2, -31 )
enabled = true
cast_to = Vector2( 65, 0 )
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( -50.0156, -1.50625 )
scale = Vector2( 1.79688, 7.03125 )
polygon = PoolVector2Array( 23.3826, -5.90133, 28.9478, -5.90133, 32.8435, -5.048, 28.3913, -4.33689, 28.3913, -3.91022, 32.2869, -2.77244, 32.8435, -2.20356, 28.3913, -1.06578, 32.8435, -0.354667, 32.8435, 0.0719998, 24.4956, 0.0719998, 24.4956, -1.06578, 21.713, -2.06133, 21.713, -3.05689, 24.4956, -4.05244, 24.4956, -4.47911, 22.8261, -4.76356 )

[node name="Hp" type="ColorRect" parent="."]
margin_left = -14.0
margin_top = 2.0
margin_right = 14.0
margin_bottom = 6.0
rect_pivot_offset = Vector2( 14, 0 )

[node name="CurrentHp" type="ColorRect" parent="Hp"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = -1.0
rect_pivot_offset = Vector2( 13, 0 )
color = Color( 1, 0, 0, 1 )

[node name="GroundEnemyHand" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( -2, -24 )
monitoring = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 4 )
anims/Melee = SubResource( 2 )
anims/RESET = SubResource( 3 )
anims/Shield = SubResource( 7 )

[node name="Blood" type="CPUParticles2D" parent="."]
position = Vector2( 0, -21 )
emitting = false
amount = 27
lifetime = 0.25
one_shot = true
speed_scale = 1.8
explosiveness = 0.73
emission_shape = 1
emission_sphere_radius = 0.01
spread = 180.0
initial_velocity = 167.92
radial_accel = 23.19
radial_accel_random = 0.34
angle = -250.4
angle_random = 0.85
scale_amount_curve = SubResource( 5 )
color = Color( 1, 0, 0, 1 )

[node name="Emotion" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -55 )
scale = Vector2( 0.25, 0.25 )

[node name="Cooldown" type="Timer" parent="."]
one_shot = true

[node name="Death" type="CPUParticles2D" parent="."]
position = Vector2( 0, -7 )
emitting = false
amount = 25
lifetime = 0.66
one_shot = true
explosiveness = 0.7
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector2( 1, 1 )
spread = 180.0
initial_velocity = 130.44
angular_velocity = 360.0
scale_amount = 24.82
scale_amount_curve = SubResource( 6 )
color = Color( 1, 0.101961, 0.101961, 0.427451 )

[node name="Shield" type="Sprite" parent="."]
visible = false
modulate = Color( 0, 0.905882, 1, 0.247059 )
position = Vector2( 0, -21 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 5 )

[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]
